--- a/help/index.html
+++ b/help/index.html
@@ -88,7 +88,7 @@
 		<div>
 		If you use ECOGEN for your research/applications, please cite ECOGEN using:
 		<p>
-	  	Schmidmayer, K., Petitpas, F., Le Martelot, S. &amp; Daniel, E. (2020). ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows. <i>Computer Physics Communications</i>.
+	  	Schmidmayer, K., Petitpas, F., Le Martelot, S., Daniel, E. (2020). ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows. <i>Computer Physics Communications</i>, 251, 107093.
 	  	<a class="badge" href="https://doi.org/10.1016/j.cpc.2019.107093" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.cpc.2019.107093-green.svg" alt="DOI link" /></a>
 		</p>
 		<pre>
@@ -96,11 +96,12 @@
 @article{schmidmayer2020ecogen,
   doi = {10.1016/j.cpc.2019.107093},
   url = {https://doi.org/10.1016/j.cpc.2019.107093},
-  title={ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows},
-  author={Schmidmayer, Kevin and Petitpas, Fabien and Le Martelot, S{\'e}bastien and Daniel, E},
+  title={ {ECOGEN}: {A}n open-source tool for multiphase, compressible, multiphysics flows},
+  author={Schmidmayer, Kevin and Petitpas, Fabien and Le Martelot, S{\'e}bastien and Daniel, {\'E}ric},
   journal={Computer Physics Communications},
   volume={251},
-  year={2019}
+  pages={107093},
+  year={2020}
 }
 		  </code>
 		</pre>
