--- a/index.html
+++ b/index.html
@@ -73,8 +73,23 @@
 
       <hr />
 
+<!-- <article>
+	<h1> New release ECOGEN_v3.0 </h1>
+	<p class="date">2021-03-10</p>
+	<p>A new release, ECOGEN_v3.0, is available on GitHub. It includes new features and fixes bugs:
+		<ul>		
+			<li> General restructuration and cleaning. </li>
+			<li> Correction of several bugs (viscous terms, etc.). </li>
+			<li> Additionnal reference test cases. </li>
+			<li> Non-regression test database and tool added. </li>
+			<li> Documentation included in the package. </li>
+		</ul>	
+	</p>
+</article>
+<hr> -->
 <article>
 	<h1> New release ECOGEN_v2.0 </h1>
+	<p class="date">2020-05-11</p>
 	<p>A new release, ECOGEN_v2.0, is available on GitHub. It includes new features and fixes bugs:
 		<ul>		
 			<li> AMR multicore computations are now efficiently load balanced. </li>
@@ -83,20 +98,6 @@
 	</p>
 		<img src="/ECOGEN/assets/images/BubbleHelium.gif" alt="Load balancing on a bubble-shock interaction." />
 </article>
-<hr />
-
-<article>
-	<h1> ECOGEN GUI now available!</h1>
-	<p>A simple Graphical User Interface has been developed to easily edit ECOGEN input files.
-		<ul>		
-			<li> Manage easily your equation-of-state parameters. </li>
-			<li> Create, open and save test cases.</li>
-			<li> Prepare runs for ECOGEN.</li>
-		</ul>	
-	</p>
-	<img src="/ECOGEN/assets/images/ECOGEN_GUI.png" alt="ECOGEN_GUI view" />
-</article>
-
 
 
     </main>
