--- a/overview/index.html
+++ b/overview/index.html
@@ -69,7 +69,7 @@
 				<li> Multi-models (single phase, multiphase with or without equilibrium). </li>
 				<li> Multi-physics (thermal transfers, viscosity, surface tension, mass transfers). </li>
 				<li> Multi-meshes (Cartesian, unstructured, AMR). </li>
-				<li> Multi-cores. </li>
+				<li> HPC. </li>
 			</ul>
 			</p>
 		<h2> Features </h2>
@@ -77,6 +77,7 @@
 			<li> Solves interface problems between pure or multicomponent fluids and mixtures of multiphase flows. </li>
 			<li> Treats surface tension, heat and mass transfers for cavitation and evaporating and condensing flows. </li>
 			<li> Computes wave propagation in strongly unsteady situations using a specific Adaptive Mesh Refinement. </li>
+			<li> Finite volume method. </li>
 			<li> C++ object oriented programming language. </li>
 			<li> Computes unstructured grids to simulate complex geometries. </li>
 			<li> Parallel computing using open MPI libraries. </li>			
