--- a/partners/index.html
+++ b/partners/index.html
@@ -77,11 +77,19 @@
 	<div class="imgLogos">
 		<a href="http://www.cnrs.fr/" target="_blank">  <img src="/ECOGEN/assets/images/CNRS.jpg" alt="CNRS" /> </a>
 	</div>
+</div>
+<div id="logos">
 	<div class="imgLogos">
 		<a href="http://www.mce.caltech.edu/" target="_blank">  <img src="/ECOGEN/assets/images/CaltechMCE.png" alt="CaltechMCE" /> </a>
 	</div>
 	<div class="imgLogos">
 	<a href="https://code-mphi.fr/" target="_blank">  <img src="/ECOGEN/assets/images/myfrogVert_OR.jpg" alt="code-mphi" /> </a>
+	</div>
+	<div class="imgLogos">
+	<a href="https://www.defense.gouv.fr/dga" target="_blank">  <img src="/ECOGEN/assets/images/DGA.png" alt="dga" /> </a>
+	</div>
+	<div class="imgLogos">
+	<a href="https://www.onr.navy.mil/" target="_blank">  <img src="/ECOGEN/assets/images/ONR.png" alt="Office of Naval Research" /> </a>
 	</div>
 </div>
 
