--- a/publications/index.html
+++ b/publications/index.html
@@ -66,21 +66,22 @@
 	<p> Each part and specificity of ECOGEN has been validated and the results are published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN!<br />
 	ECOGEN main journal article is the following: </p>
 	<ul>
-		<li> Schmidmayer, K., Petitpas, F., Le Martelot, S. &amp; Daniel, E. (2020). ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows. <i>Computer Physics Communications</i>. <a class="badge" href="https://doi.org/10.1016/j.cpc.2019.107093" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.cpc.2019.107093-green.svg" alt="DOI link" /></a>
+		<li> Schmidmayer, K., Petitpas, F., Le Martelot, S., Daniel, E. (2020). ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows. <i>Computer Physics Communications</i>, 251, 107093. <a class="badge" href="https://doi.org/10.1016/j.cpc.2019.107093" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.cpc.2019.107093-green.svg" alt="DOI link" /></a>
 		</li>
 	</ul>
 	<p> And here is a list of other journal articles describing or using ECOGEN: </p>
 	<ul>
-		<li> Dorschner, B., Biasiori-Poulanges, L., Schmidmayer, K., El-Rabii, H. &amp; Colonius, T. (2020). On the formation and recurrent shedding of ligaments in droplet aerobreakup. <i>Journal of Fluid Mechanics</i> (submitted). <a class="badge" href="https://arxiv.org/abs/2003.00048" target="_blank"><img src="https://img.shields.io/badge/arXiv-2003.00048-B31B1B.svg" alt="arXiv link" /></a>
+		<li> Dorschner, B., Biasiori-Poulanges, L., Schmidmayer, K., El-Rabii, H., Colonius, T. (2020). On the formation and recurrent shedding of ligaments in droplet aerobreakup. <i>Journal of Fluid Mechanics</i>, 904, A20. <a class="badge" href="https://doi.org/10.1017/jfm.2020.699" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.699-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Trummler, T., Bryngelson, S. H., Schmidmayer, K., Schmidt, S. J., Colonius, T. &amp; Adams, N. A. (2020). Near-surface dynamics of a gas bubble collapsing above a crevice. <i>Journal of Fluid Mechanics</i> (submitted). <a class="badge" href="https://arxiv.org/abs/1912.07022" target="_blank"><img src="https://img.shields.io/badge/arXiv-1912.07022-B31B1B.svg" alt="arXiv link" /></a>
+		<li> Trummler, T., Bryngelson, S. H., Schmidmayer, K., Schmidt, S. J., Colonius, T., Adams, N. A. (2020). Near-surface dynamics of a gas bubble collapsing above a crevice. <i>Journal of Fluid Mechanics</i>, 899, A16. <a class="badge" href="https://doi.org/10.1017/jfm.2020.432" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.432-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Bryngelson, S. H., &amp; Colonius, T. (2019). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics. <i>Journal of Computational Physics</i>. <a class="badge" href="https://arxiv.org/abs/1903.08242" target="_blank"><img src="https://img.shields.io/badge/arXiv-1903.08242-B31B1B.svg" alt="arXiv link" /></a>
+		<li> Schmidmayer, K., Bryngelson, S. H., Colonius, T. (2019). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics. <i>Journal of Computational Physics</i>, 402, 109080. <a class="badge" href="https://doi.org/10.1016/j.jcp.2019.109080" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.109080-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Pishchalnikov, Y. A., Behnke-Parks, W. M., Schmidmayer, K., Maeda, K., Colonius, T., Kenny, T. W., &amp; Laser, D. J. (2019). High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone. <i>The Journal of the Acoustical Society of America</i>. </li>
-		<li> Schmidmayer, K., Petitpas, F., &amp; Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. <i>Journal of Computational Physics</i>. <a class="badge" href="https://dx.doi.org/10.1016/j.jcp.2019.03.011" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.03.011-green.svg" alt="DOI link" /></a>
+		<li> Pishchalnikov, Y. A., Behnke-Parks, W. M., Schmidmayer, K., Maeda, K., Colonius, T., Kenny, T. W., Laser, D. J. (2019). High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone. <i>The Journal of the Acoustical Society of America</i>, 146, 516--531. <a class="badge" href="https://doi.org/10.1121/1.5116693" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1121/1.5116693-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Petitpas, F., Daniel, E., Favrie, N. &amp; Gavrilyuk, S. (2017). A model and numerical method for compressible flows with capillary effects. <i>Journal of Computational Physics</i>. <a class="badge" href="https://doi.org/10.1016/j.jcp.2017.01.001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2017.01.001-green.svg" alt="DOI link" /></a>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. <i>Journal of Computational Physics</i>, 388, 252--278. <a class="badge" href="https://dx.doi.org/10.1016/j.jcp.2019.03.011" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.03.011-green.svg" alt="DOI link" /></a>
+		</li>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E., Favrie, N., Gavrilyuk, S. (2017). A model and numerical method for compressible flows with capillary effects. <i>Journal of Computational Physics</i>, 334, 468--496. <a class="badge" href="https://doi.org/10.1016/j.jcp.2017.01.001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2017.01.001-green.svg" alt="DOI link" /></a>
 		</li>
 	</ul>
 </article>
@@ -89,9 +90,12 @@
 	<h1> PhD Thesis </h1>
 	<p> PhD thesis where ECOGEN has been used: </p>
 	<ul>
+		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers</i>.
+		</li>
 		<li> Veilleux, J.-C. (2019). Pressure and Stress Transients in Autoinjector Devices. <i>California Institute of Technology</i>. <a class="badge" href="http://dx.doi.org/10.7907/VJSH-TF65" target="_blank"><img src="https://img.shields.io/badge/DOI-10.7907/VJSH--TF65-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="http://www.theses.fr/2017AIXM0339" target="_blank">http://www.theses.fr/2017AIXM0339 </a> </li>
+		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="http://www.theses.fr/2017AIXM0339" target="_blank">http://www.theses.fr/2017AIXM0339 </a>
+		</li>
 	</ul>
 </article>
 
@@ -99,13 +103,13 @@
 	<h1> Conferences </h1>
 	<p> Conferences where ECOGEN has been presented or used: </p>
 	<ul>
-		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H. &amp; Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
-		<li> Schmidmayer, K. &amp; Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019</i>. </li>
-		<li> Schmidmayer, K. &amp; Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
-		<li> Schmidmayer, K., Marty, A., Petitpas, F., &amp; Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics</i>. <a class="badge" href="https://arxiv.org/abs/1805.01363" target="_blank"><img src="https://img.shields.io/badge/arXiv-1805.01363-B31B1B.svg" alt="arXiv link" /></a>
+		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H., Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
+		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019</i>. </li>
+		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
+		<li> Schmidmayer, K., Marty, A., Petitpas, F., Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics</i>. <a class="badge" href="https://arxiv.org/abs/1805.01363" target="_blank"><img src="https://img.shields.io/badge/arXiv-1805.01363-B31B1B.svg" alt="arXiv link" /></a>
 		</li>
-		<li> Schmidmayer, K., Petitpas, F. &amp; Daniel, É. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018</i>. </li>
-		<li> Schmidmayer, K., Petitpas, F., &amp; Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. <i>46th AIAA Fluid Dynamics Conference</i>. </li>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018</i>. </li>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. <i>46th AIAA Fluid Dynamics Conference</i>. </li>
 	</ul>
 </article>
 
