--- a/ressources/index.html
+++ b/ressources/index.html
@@ -71,6 +71,7 @@
 	</div>
 	<h2>Direct links to released versions</h2>
 	<ul>  
+			<!-- <li>ECOGEN 3.0 download - <a href="" target="_blank" >ECOGEN-3.0.zip</a> </li> -->
 			<li>ECOGEN 2.0 download - <a href="https://github.com/code-mphi/ECOGEN/archive/v2.0.zip" target="_blank">ECOGEN-2.0.zip</a> </li>
 			<li>ECOGEN 1.0 download - <a href="https://github.com/code-mphi/ECOGEN/archive/v1.0.zip" target="_blank">ECOGEN-1.0.zip</a> </li>
 	</ul>
