Add information about version 3.0

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <hr />
 
-<!-- <article>
+<article>
 	<h1> New release ECOGEN_v3.0 </h1>
 	<p class="date">2021-03-10</p>
 	<p>A new release, ECOGEN_v3.0, is available on GitHub. It includes new features and fixes bugs:
@@ -82,11 +82,11 @@
 			<li> Correction of several bugs (viscous terms, etc.). </li>
 			<li> Additionnal reference test cases. </li>
 			<li> Non-regression test database and tool added. </li>
-			<li> Documentation included in the package. </li>
 		</ul>	
 	</p>
 </article>
-<hr> -->
+<hr />
+
 <article>
 	<h1> New release ECOGEN_v2.0 </h1>
 	<p class="date">2020-05-11</p>
