--- a/overview/index.html
+++ b/overview/index.html
@@ -64,7 +64,7 @@
 		<div class="colonne">
 	<aside>
 		<h2> Sharing knowledge </h2>
-			<p>ECOGEN is a CFD platform dedicated to numerical simulation of compressible multiphase flows. It has the vocation to share academics researches in the multiphase flow field with other academics but also with industrials, students, etc.
+			<p>ECOGEN is a CFD platform dedicated to numerical simulation of compressible multiphase flows. It has the vocation to share academic research in the multiphase flow field with other academics but also with industrials and students.
 			<ul>  
 				<li> Multi-models (single phase, multiphase with or without equilibrium). </li>
 				<li> Multi-physics (thermal transfers, viscosity, surface tension, mass transfers). </li>
