--- a/partners/index.html
+++ b/partners/index.html
@@ -80,7 +80,7 @@
 </div>
 <div id="logos">
 	<div class="imgLogos">
-		<a href="http://www.mce.caltech.edu/" target="_blank">  <img src="/ECOGEN/assets/images/CaltechMCE.png" alt="CaltechMCE" /> </a>
+		<a href="http://www.caltech.edu/" target="_blank">  <img src="/ECOGEN/assets/images/Caltech.png" alt="Caltech" /> </a>
 	</div>
 	<div class="imgLogos">
 	<a href="https://code-mphi.fr/" target="_blank">  <img src="/ECOGEN/assets/images/myfrogVert_OR.jpg" alt="code-mphi" /> </a>
