--- a/ressources/index.html
+++ b/ressources/index.html
@@ -69,8 +69,13 @@
     	<a href="https://github.com/code-mphi/ECOGEN" target="_blank">https://github.com/code-mphi/ECOGEN</a>.
     </p>
 	</div>
-	<h2>Direct links to released versions</h2>
+	<h2>Last stable version</h2>
 	<ul>  
+			<li>ECOGEN 3.1 download - <a href="https://github.com/code-mphi/ECOGEN/archive/v3.1.zip" target="_blank">ECOGEN-3.1.zip</a> </li>
+	</ul>
+	<h2>Older versions</h2>
+	<ul>
+			<li>ECOGEN 3.0.1 download - <a href="https://github.com/code-mphi/ECOGEN/archive/v3.0.1.zip" target="_blank">ECOGEN-3.0.1.zip</a> </li>  
 			<li>ECOGEN 3.0 download - <a href="https://github.com/code-mphi/ECOGEN/archive/v3.0.zip" target="_blank">ECOGEN-3.0.zip</a> </li>
 			<li>ECOGEN 2.0 download - <a href="https://github.com/code-mphi/ECOGEN/archive/v2.0.zip" target="_blank">ECOGEN-2.0.zip</a> </li>
 			<li>ECOGEN 1.0 download - <a href="https://github.com/code-mphi/ECOGEN/archive/v1.0.zip" target="_blank">ECOGEN-1.0.zip</a> </li>
