--- a/publications/index.html
+++ b/publications/index.html
@@ -71,6 +71,8 @@
 	</ul>
 	<p> And here is a list of other journal articles describing or using ECOGEN: </p>
 	<ul>
+		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2021). Modelling interactions between waves and diffused interfaces. <i>Submitted.</i> <a href="https://hal.archives-ouvertes.fr/hal-03387818">Download on HAL</a>
+		</li>
 		<li> Dorschner, B., Biasiori-Poulanges, L., Schmidmayer, K., El-Rabii, H., Colonius, T. (2020). On the formation and recurrent shedding of ligaments in droplet aerobreakup. <i>Journal of Fluid Mechanics</i>, 904, A20. <a class="badge" href="https://doi.org/10.1017/jfm.2020.699" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.699-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Trummler, T., Bryngelson, S. H., Schmidmayer, K., Schmidt, S. J., Colonius, T., Adams, N. A. (2020). Near-surface dynamics of a gas bubble collapsing above a crevice. <i>Journal of Fluid Mechanics</i>, 899, A16. <a class="badge" href="https://doi.org/10.1017/jfm.2020.432" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.432-green.svg" alt="DOI link" /></a>
@@ -90,11 +92,11 @@
 	<h1> PhD Thesis </h1>
 	<p> PhD thesis where ECOGEN has been used: </p>
 	<ul>
-		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers</i>.
+		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers.</i> <a href="https://www.theses.fr/2021ESMA0002" target="_blank">Download on theses.fr</a>
 		</li>
 		<li> Veilleux, J.-C. (2019). Pressure and Stress Transients in Autoinjector Devices. <i>California Institute of Technology</i>. <a class="badge" href="http://dx.doi.org/10.7907/VJSH-TF65" target="_blank"><img src="https://img.shields.io/badge/DOI-10.7907/VJSH--TF65-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="http://www.theses.fr/2017AIXM0339" target="_blank">http://www.theses.fr/2017AIXM0339 </a>
+		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="http://www.theses.fr/2017AIXM0339" target="_blank">Download on theses.fr</a>
 		</li>
 	</ul>
 </article>
@@ -103,12 +105,13 @@
 	<h1> Conferences </h1>
 	<p> Conferences where ECOGEN has been presented or used: </p>
 	<ul>
+		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turboexpo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. </li>
 		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H., Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
 		<li> Schmidmayer, K., Marty, A., Petitpas, F., Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics</i>. <a class="badge" href="https://arxiv.org/abs/1805.01363" target="_blank"><img src="https://img.shields.io/badge/arXiv-1805.01363-B31B1B.svg" alt="arXiv link" /></a>
 		</li>
-		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018</i>. </li>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018</i>. </li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. <i>46th AIAA Fluid Dynamics Conference</i>. </li>
 	</ul>
 </article>
