--- a/gallery/index.html
+++ b/gallery/index.html
@@ -125,6 +125,16 @@
 			<figcaption>Water/air Richtmyer-Meshkov instability</figcaption>
 		</div>
 	</div>
+	<div class="gallery">
+		<div class="galleryVideo">
+			<img class="galleryGif" src="/ECOGEN/assets/images/cavitation-pocket.png" alt="Cavitation in pump." />
+			<figcaption>Cavitation pockets on a three blades inducer. </figcaption>
+		</div>
+		<div class="galleryVideo">
+			In a rocket engine turbopump, the very high speed movement of the blades can lead to the formation of vapor structures.
+			In some critical cases, cavitation can then cause a decrease in the overall performance of the pump. In this picture, cavitation pockets appearing at the leading edge tips are captured using a thermodynamically consistent phase change approach.
+		</div>
+	</div>
 </article>
 
 <hr />
