Home page update
- Home page update
- Restructuration of tabs
- Update publications
- new page release

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -41,11 +41,11 @@
 	  
 	  	<li><a href="/ECOGEN/gallery/">Gallery</a></li>
 	  
+	  	<li><a href="/ECOGEN/releases/">Releases</a></li>
+	  
 	  	<li><a href="/ECOGEN/ressources/">Ressources</a></li>
 	  
 	  	<li><a href="/ECOGEN/publications/">Publications</a></li>
-	  
-	  	<li><a href="/ECOGEN/partners/">Partners</a></li>
 	  
 	  	<li><a href="/ECOGEN/services/">Services</a></li>
 	  
@@ -173,8 +173,15 @@
     </main>
     <footer>
 	<div> ECOGEN is developped by <a href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
-	
 	<div><span class="copy-left">©</span> ECOGEN</div>
+	<div class="flexZone">
+		<div class="design">
+			<p>Design web:</p>
+		</div> 
+		<div class="design">
+			<a href="mailto:productiondulama@gmail.com" target="_blank" > <img src="/ECOGEN/assets/images/productionduLama.png" alt="production du Lama" /> </a> 
+		</div>
+	</div>
 </footer>
   </body>
 </html>
