--- a/publications/index.html
+++ b/publications/index.html
@@ -41,11 +41,11 @@
 	  
 	  	<li><a href="/ECOGEN/gallery/">Gallery</a></li>
 	  
+	  	<li><a href="/ECOGEN/releases/">Releases</a></li>
+	  
 	  	<li><a href="/ECOGEN/ressources/">Ressources</a></li>
 	  
 	  	<li><a href="/ECOGEN/publications/">Publications</a></li>
-	  
-	  	<li><a href="/ECOGEN/partners/">Partners</a></li>
 	  
 	  	<li><a href="/ECOGEN/services/">Services</a></li>
 	  
@@ -62,15 +62,24 @@
     <main>
 		<h1>Publications</h1>
 		<article>
-	<h1> Journal Articles </h1>
-	<p> Each part and specificity of ECOGEN has been validated and the results are published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN!<br />
-	ECOGEN main journal article is the following: </p>
+	<p> Each part and specificity of ECOGEN has been validated and the results are published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN! Below are lists of journal articles, PhD theses and conferences describing, improving or using ECOGEN (sorted by date from the most recent). </p>
+</article>
+
+<article>
+	<h1> Main Journal Article </h1>
 	<ul>
 		<li> Schmidmayer, K., Petitpas, F., Le Martelot, S., Daniel, E. (2020). ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows. <i>Computer Physics Communications</i>, 251, 107093. <a class="badge" href="https://doi.org/10.1016/j.cpc.2019.107093" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.cpc.2019.107093-green.svg" alt="DOI link" /></a>
 		</li>
 	</ul>
-	<p> And here is a list of other journal articles describing or using ECOGEN: </p>
-	<ul>
+</article>
+
+<article>
+	<h1> Journal Articles </h1>
+	<ol>
+		<li> Fan, E., Hao, J., Guan, B., Wen, C. Y., Shi, L. (2022). Numerical investigation on reacting shock-bubble interaction at a low Mach limit. <i>Combustion and Flame</i>, 241, 112085. <a class="badge" href="https://doi.org/10.1016/j.combustflame.2022.112085" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.combustflame.2022.112085-green.svg" alt="DOI link" /></a>
+		</li>
+		<li> Sun, S., Chen, F., Zhao, M. (2022). Numerical simulation and analysis of the underwater implosion of spherical hollow ceramic pressure hulls in 11000m depth. <i>Journal of Ocean Engineering and Science</i>. <a class="badge" href="https://doi.org/10.1016/j.joes.2022.01.002" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.joes.2022.01.002-green.svg" alt="DOI link" /></a>
+		</li>
 		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2021). Modelling interactions between waves and diffused interfaces. <i>Submitted.</i> <a href="https://hal.archives-ouvertes.fr/hal-03387818">Download on HAL</a>
 		</li>
 		<li> Dorschner, B., Biasiori-Poulanges, L., Schmidmayer, K., El-Rabii, H., Colonius, T. (2020). On the formation and recurrent shedding of ligaments in droplet aerobreakup. <i>Journal of Fluid Mechanics</i>, 904, A20. <a class="badge" href="https://doi.org/10.1017/jfm.2020.699" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.699-green.svg" alt="DOI link" /></a>
@@ -85,27 +94,27 @@
 		</li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E., Favrie, N., Gavrilyuk, S. (2017). A model and numerical method for compressible flows with capillary effects. <i>Journal of Computational Physics</i>, 334, 468--496. <a class="badge" href="https://doi.org/10.1016/j.jcp.2017.01.001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2017.01.001-green.svg" alt="DOI link" /></a>
 		</li>
-	</ul>
+	</ol>
 </article>
 
 <article>
-	<h1> PhD Thesis </h1>
-	<p> PhD thesis where ECOGEN has been used: </p>
-	<ul>
-		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers.</i> <a href="https://www.theses.fr/2021ESMA0002" target="_blank">Download on theses.fr</a>
+	<h1> PhD Theses </h1>
+	<ol>
+		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers</i>. <a href="https://www.theses.fr/2021ESMA0002" target="_blank">Download on www.theses.fr</a>
+		</li>
+		<li> Truumler, T. (2020). Numerical investigations of cavitation phenomena. <i>Technishe Universität München</i>. <a href="https://mediatum.ub.tum.de/doc/1543746/1543746.pdf" target="_blank">Download on mediatum.ub.tum.de</a>
 		</li>
 		<li> Veilleux, J.-C. (2019). Pressure and Stress Transients in Autoinjector Devices. <i>California Institute of Technology</i>. <a class="badge" href="http://dx.doi.org/10.7907/VJSH-TF65" target="_blank"><img src="https://img.shields.io/badge/DOI-10.7907/VJSH--TF65-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="http://www.theses.fr/2017AIXM0339" target="_blank">Download on theses.fr</a>
+		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="http://www.theses.fr/2017AIXM0339" target="_blank">Download on www.theses.fr</a>
 		</li>
-	</ul>
+	</ol>
 </article>
 
 <article>
 	<h1> Conferences </h1>
-	<p> Conferences where ECOGEN has been presented or used: </p>
-	<ul>
-		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turboexpo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. </li>
+	<ol>
+		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turbo Expo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. </li>
 		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H., Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
@@ -113,14 +122,21 @@
 		</li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018</i>. </li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. <i>46th AIAA Fluid Dynamics Conference</i>. </li>
-	</ul>
+	</ol>
 </article>
 
     </main>
     <footer>
 	<div> ECOGEN is developped by <a href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
-	
 	<div><span class="copy-left">©</span> ECOGEN</div>
+	<div class="flexZone">
+		<div class="design">
+			<p>Design web:</p>
+		</div> 
+		<div class="design">
+			<a href="mailto:productiondulama@gmail.com" target="_blank" > <img src="/ECOGEN/assets/images/productionduLama.png" alt="production du Lama" /> </a> 
+		</div>
+	</div>
 </footer>
   </body>
 </html>
