--- a/publications/index.html
+++ b/publications/index.html
@@ -76,17 +76,23 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
+		</li>
+		<li> Biasiori-Poulanges, L., Bokman, G. T., Baumann, E., Supponen, O. (2022). Dynamics of a shocked bubble-encapsulated droplet. <i>Applied Physics Letters</i>, 120 (26), 260601. <a class="badge" href="https://doi.org/10.1063/5.0102009" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0102009-green.svg" alt="DOI link" /></a>
+		</li>
 		<li> Fan, E., Hao, J., Guan, B., Wen, C. Y., Shi, L. (2022). Numerical investigation on reacting shock-bubble interaction at a low Mach limit. <i>Combustion and Flame</i>, 241, 112085. <a class="badge" href="https://doi.org/10.1016/j.combustflame.2022.112085" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.combustflame.2022.112085-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Sun, S., Chen, F., Zhao, M. (2022). Numerical simulation and analysis of the underwater implosion of spherical hollow ceramic pressure hulls in 11000m depth. <i>Journal of Ocean Engineering and Science</i>. <a class="badge" href="https://doi.org/10.1016/j.joes.2022.01.002" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.joes.2022.01.002-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2021). Modelling interactions between waves and diffused interfaces. <i>Submitted.</i> <a href="https://hal.archives-ouvertes.fr/hal-03387818">Download on HAL</a>
+		<li> Redding, J. P., Khare, P. (2022). A computational study on shock induced deformation, fragmentation and vaporization of volatile liquid fuel droplets. <i>International Journal of Heat and Mass Transfer</i>, 184, 122345. <a class="badge" href="https://doi.org/10.1016/j.ijheatmasstransfer.2021.122345" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.ijheatmasstransfer.2021.122345-green.svg" alt="DOI link" /></a>
+		</li>
+		<li> Biasiori-Poulanges, L., El-Rabii, H. (2021). Shock-induced cavitation and wavefront analysis inside a water droplet. <i>Physics of Fluids</i>, 33 (9), 097104. <a class="badge" href="https://doi.org/10.1063/5.0063827" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0063827-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Dorschner, B., Biasiori-Poulanges, L., Schmidmayer, K., El-Rabii, H., Colonius, T. (2020). On the formation and recurrent shedding of ligaments in droplet aerobreakup. <i>Journal of Fluid Mechanics</i>, 904, A20. <a class="badge" href="https://doi.org/10.1017/jfm.2020.699" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.699-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Trummler, T., Bryngelson, S. H., Schmidmayer, K., Schmidt, S. J., Colonius, T., Adams, N. A. (2020). Near-surface dynamics of a gas bubble collapsing above a crevice. <i>Journal of Fluid Mechanics</i>, 899, A16. <a class="badge" href="https://doi.org/10.1017/jfm.2020.432" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.432-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Bryngelson, S. H., Colonius, T. (2019). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics. <i>Journal of Computational Physics</i>, 402, 109080. <a class="badge" href="https://doi.org/10.1016/j.jcp.2019.109080" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.109080-green.svg" alt="DOI link" /></a>
+		<li> Schmidmayer, K., Bryngelson, S. H., Colonius, T. (2020). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics. <i>Journal of Computational Physics</i>, 402, 109080. <a class="badge" href="https://doi.org/10.1016/j.jcp.2019.109080" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.109080-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Pishchalnikov, Y. A., Behnke-Parks, W. M., Schmidmayer, K., Maeda, K., Colonius, T., Kenny, T. W., Laser, D. J. (2019). High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone. <i>The Journal of the Acoustical Society of America</i>, 146, 516--531. <a class="badge" href="https://doi.org/10.1121/1.5116693" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1121/1.5116693-green.svg" alt="DOI link" /></a>
 		</li>
@@ -114,7 +120,9 @@
 <article>
 	<h1> Conferences </h1>
 	<ol>
+		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions of waves with diffused interfaces. <i>10th International Conference on Numerical Methods for Multi-Material Fluid Flow, MultiMat 2022</i>. </li>
 		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turbo Expo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. </li>
+		<li> Schmidmayer, K. (2022). Modeling and simulation of bubble dynamics in the diffuse-interface framework. <i>Workshop on cavitation, bubble dynamics and mass transfer, Strasbourg, France</i>. </li>
 		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H., Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
